# parallel-stl-algorithms

./: .gitmodules  CMakeLists.txt  README.md  tasks.md
cmake/: build_test_executable.cmake  install_gtest.cmake
gtest/src/: s0_utils_test.cpp
include/private/: s0_utils.hpp
include/public/: parallel_algorithms_openmp.hpp
openmp-parallel-implementation/: .gitignore  CMakeLists.txt
openmp-parallel-implementation/cmake/: build_test_executable.cmake  install_gtest.cmake
openmp-parallel-implementation/gtest/src/: s0_omp_parallel_algorithms_test.cpp  s0_utils_test.cpp
openmp-parallel-implementation/include/private/: s0_type_traits.hpp  s0_utils.hpp
openmp-parallel-implementation/include/public/: s0_parallel_algorithms_openmp.hpp
openmp-parallel-implementation/src/: main.cpp
src/: main.cpp
utils-library/: CMakeLists.txt
utils-library/cmake/: build_test_executable.cmake
utils-library/include/public/CommonUtils/: s0_type_traits.hpp  s0_utils.hpp
